[gd_scene load_steps=2 format=2]

[ext_resource path="res://ScreenShake.gd" type="Script" id=1]

[node name="ScreenShake" type="Node"]
script = ExtResource( 1 )

[node name="Duration" type="Timer" parent="."]
one_shot = true

[node name="Frequancy" type="Timer" parent="."]

[node name="ShakeTween" type="Tween" parent="."]

[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
[connection signal="timeout" from="Frequancy" to="." method="_on_Frequancy_timeout"]
